# plugin-store

./: CLAUDE.md  Cargo.toml  README-ZH.md  README.md  install-local.sh  registry.json
.claude-plugin/: marketplace.json
.github/prompts/: ai-review-system.md
.github/scripts/: gen-summary-prompt.py  inject-preflight.py
.github/workflows/: cleanup-pr.yml  integration-test.yml  phase4-trigger.yml  plugin-ai-review.yml  plugin-build.yml  plugin-lint.yml  plugin-publish.yml  plugin-summary.yml  release.yml  skill-review.yml  sync-upstream.yml  update-registry.yml
cli/: Cargo.toml
docs/: FOR-DEVELOPERS-ZH.md  FOR-DEVELOPERS.md  FOR-PARTNERS-ZH.md  FOR-PARTNERS.md  FOR-USERS-ZH.md  FOR-USERS.md  REVIEW-GUIDELINES-ZH.md  REVIEW-GUIDELINES.md
scripts/: update-checker.py
skills/aave-v2-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/aave-v3-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/aerodrome-amm-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/ci-test-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/ci-test-plugin/src/: main.rs
skills/eth-price-demo/: Cargo.toml  SKILL.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
skills/eth-price-demo/.claude-plugin/: plugin.json
skills/eth-price-demo/src/: main.rs
skills/rust-eth-price-v10/: Cargo.toml  plugin.yaml
skills/rust-eth-price-v10/.claude-plugin/: plugin.json
skills/rust-eth-price-v10/skills/rust-eth-price-v10/: SKILL.md  SUMMARY.md
skills/rust-eth-price-v10/src/: main.rs
skills/rust-sol-price/: Cargo.toml  LICENSE  plugin.yaml
skills/rust-sol-price/.claude-plugin/: plugin.json
skills/rust-sol-price/skills/rust-sol-price/: SKILL.md  SUMMARY.md
skills/rust-sol-price/src/: main.rs
src/: stats.rs
(+602 files in other folders)
