[package]
name = "ci-test-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ci-test-plugin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
