[package]
name = "rust-eth-price-v10"
version = "10.0.0"
edition = "2021"
[[bin]]
name = "rust-eth-price-v10"
path = "src/main.rs"
[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
